src/styles.scss
@use '~@fortawesome/fontawesome-free/scss/fontawesome';
@use '~@fortawesome/fontawesome-free/scss/solid';
@use '~@fortawesome/fontawesome-free/scss/brands';
@use '~@ukho/design-system/styles/core.scss';
.skip-to-content-link {
	left: 2%;
	position: absolute;
	transform: translateY(-100%);
	background: #f0f0f0;
	padding: 10px;
	border: none;
	box-shadow: none;
	&:focus {
		transform: translateY(20%);
	}
}

#mainContainer {
	img.header-image {
		width: 100%
	}
	p {
		font-size: x-large;
		font-weight: 300;
	}
	a#fss-createaccount {
		padding: 20px 0;
		display: inline-block;
		&:hover {
			text-decoration: none;
		}
	}
}

ukho-phase-banner.phasebanner {
	padding: 10px;
}

.container {
	padding: 0 30px 40px;
	h1 {
		padding-left: 30px;
		margin-bottom: 10px;
	}
	p {
		padding-left: 30px;
	}	
}

.querytable {
	border-spacing: 10px;
	width: 100%;
	text-align: center;
}

table{
    width: 100%;
    text-align: left;
}

th{
	font-size: medium;
}

td{
	font-size: large;
	font-weight: 400;
}

.result-margin{
	margin-top:20px;
}

table.cdk-table td>div {
    font-weight: 400;
}

table.cdk-table th, table.cdk-table td{
    color: #221f1c !important;
}

.fa-check{
	color: #4aab37;
}

.searchSection {
	display: flex;
	flex-direction: row;
	margin-bottom: 10px;
	padding: 0 35px;
	strong {
		cursor: pointer;
	}
	.searchBtn {
		display: flex;
		flex-direction: row-reverse;
		flex-grow: 1;
	}
}

.searchFieldsRow {
	text-align: left;
	font-weight: 500;
}

.searchResult {
	padding: 0 30px;
}

.searchFieldBold {
	font-weight: 500;
}

.spinner-wrapper {
    position: fixed;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0;
    left: 0;
    background-color: rgba(80, 74, 74, 0.5);
    z-index: 998;
    app-spinner {
        width: 6rem;
        height: 6rem;
    }
}

